<resources>
    <string name="app_name">PhotoProfile</string>
    <string name="con">Continue</string>
    <string name="photos">Photos</string>
    <string name="profile">Profile</string>
    <string name="profileBold">PROFILE</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="dp">profilePhoto</string>
    <string name="email">Email</string>
    <string name="hobbies">Hobbies</string>
    <string name="edit">Edit</string>
    <string name="photo">photo</string>
    <string name="download">Download</string>
    <string name="profile_image">Profile Image</string>
    <string name="pick_image">Pick image</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="reading">Reading</string>
    <string name="coding">Coding</string>
    <string name="gaming">Gaming</string>
    <string name="image">image</string>
    <string name="profile_header">Profile</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="record_inserted">Record Inserted</string>
    <string name="special">Special</string>
    <string name="get_started">Get Started</string>
    <string name="explore_and_download_beautiful_photos">Explore and download beautiful photos</string>
    <string name="welcome_to_photoprofile">Welcome to PhotoProfile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_image">Full Image</string>
    <string name="original">Original</string>
    <string name="large">Large</string>
    <string name="large2x">large2X</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="portrait">portrait</string>
    <string name="landscape">landscape</string>
    <string name="tiny">tiny</string>
    <string name="storage">Storage</string>
</resources>