<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="300dp"
        android:text="@string/edit" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileBold"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="70dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/dp" />

    <TextView
        android:id="@+id/textViewName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="140dp"
        android:layout_marginStart="110dp"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="143dp"
        android:layout_marginStart="225dp"/>

    <TextView
        android:id="@+id/textViewCountry1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="180dp"
        android:layout_marginStart="110dp"/>

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="183dp"
        android:layout_marginStart="225dp"/>

    <TextView
        android:id="@+id/textViewEmail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="250dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="253dp"
        android:layout_marginStart="110dp"/>

    <TextView
        android:id="@+id/textViewHobbies1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="290dp" />

    <TextView
        android:id="@+id/textViewHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="293dp"
        android:layout_marginStart="110dp"/>

</FrameLayout>